--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  --color-white: #fff;
+  --color-gray: #e4e4e4;
+  --color-light-gray: #fbfbfd;
+  --color-black: #333;
+  --color-dark-gray:#747475;
+  --color-orange:rgb(255, 147, 30);
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +24,33 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.container {
+  width: 100%;
+  height: 100vh;
+  background-color: var(--color-white);
+}
+
+table {
+  width: 200px;
+  margin: 0 auto;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+}
+
+tr {
+  background-color: var(--color-light-gray);
+}
+
+table tr:first-child {
+  background-color: var(--color-gray);
+  color: var(--color-dark-gray);
+  font-weight: bold;
+}
+
+table tr:last-child {
+  background-color: var(--color-gray);
 }
